--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <!--<script src="promises.js" async defer></script>-->
+    <script  src="fetch-pokemon.js" async defer></script>
+</head>
+<body>
+    
+    <div class="container">
+        <div id="pokemon-card" class=" container row card-container"></div>
+        <div class="container row">
+        <label for="pokemon-name">Pokemon (Name / ID)</label>
+        <input id="pokemon-name" type="text" name="pokemon-name" value="" placeholder="Lugia"/>
+        </div>
+        <div class="container row">
+            <button class="btn-primary" id="prev-btn">Previous</button>
+            <button class="btn-primary" id="get-btn">Get Pokemon</button>
+            <button class="btn-primary" id="next-btn">Next</button>
+        </div>
+    </div>
 
+    
+</body>
+</html>
